@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+January 13, 2001
++ [rdieter] add pkg-config support to cmake
+
 January 9, 2011 
 - [antonin] removed forgotten debug info in imagetopnm().
 
